--- a/examples/Makefile
+++ b/examples/Makefile
@@ -5,8 +5,7 @@ all: prog1
 
 
 prog1: ../dist/libscm.so prog1.c
-	gcc -I../ -L../dist -lscm -o prog1 prog1.c
-
+	gcc prog1.c -g -I../dist -L../dist -lscm -lpthread -o prog1
 clean:
 	rm -rf prog1
 
